--- a/lib/babyshower_web/controllers/rsvp_html/show.html.heex
+++ b/lib/babyshower_web/controllers/rsvp_html/show.html.heex
@@ -137,7 +137,8 @@
                                 Girl
                             </div>
                         </div>
-                        <div class="border rounded-2xl bg-white/80 backdrop-blur-sm shadow-lg p-6 mt-6">
+
+                        <div :if={@family_guess == nil} class="border rounded-2xl bg-white/80 backdrop-blur-sm shadow-lg p-6 mt-6">
                             <div :for={guess <- @guesses} class="group">
                                 <div class="flex items-center gap-4 justify-between p-4 transition-all duration-300 hover:bg-gray-50 rounded-xl">
                                     <span class="text-lg font-medium text-gray-700">
@@ -160,6 +161,7 @@
                                     </div>
                                 </div>
                                 <div class="h-px bg-gradient-to-r from-transparent via-gray-200 to-transparent last:hidden"></div>
+                                <hr/>
                             </div>
                         </div>
                     </div>
