Cahnged the title

--- a/lib/babyshower_web/components/layouts/app.html.heex
+++ b/lib/babyshower_web/components/layouts/app.html.heex
@@ -60,7 +60,7 @@
       <div :if={assigns[:app_layout]} class="space-y-12">
         <div class="text-center space-y-">
           <h1 class="text-5xl cartoon-title"> 
-            Oh Baby !
+            Babyshower
           </h1>
           <div class="cartoon-card">
             <img class="w-full h-[400px] object-cover rounded-[2rem] border-8 border-white" src={~p"/images/baby.jpg"}/>
