--- a/lib/babyshower_web/components/layouts/app.html.heex
+++ b/lib/babyshower_web/components/layouts/app.html.heex
@@ -63,7 +63,7 @@
             Babyshower
           </h1>
           <div class="cartoon-card">
-            <img class="w-full h-[400px] object-cover rounded-[2rem] border-8 border-white" src={~p"/images/baby.jpg"}/>
+            <img class="w-full h-[400px] object-cover rounded-[2rem] border-8 border-white" src={~p"/images/romantic.jpg"}/>
           </div>
         </div>
 
