Added more images and fixed the UI of the form to match mobile

--- a/lib/babyshower_web/controllers/rsvp_html/show.html.heex
+++ b/lib/babyshower_web/controllers/rsvp_html/show.html.heex
@@ -63,7 +63,7 @@
                     </div>
                 </.header>
                 
-                <div :if={@guest.response.invite_accepted} class="bg-sky-100/80 rounded-3xl cartoon-text text-center text-lg">
+                <div :if={@guest.response.invite_accepted} class="bg-sky-100/80 rounded-3xl py-2 cartoon-text text-center text-lg">
                     See you on
                     <div class="name-harshil font-semibold">
                         <%= @event_date %>
