--- a/lib/babyshower_web/components/layouts/app.html.heex
+++ b/lib/babyshower_web/components/layouts/app.html.heex
@@ -60,48 +60,47 @@
       <div :if={assigns[:app_layout]} class="space-y-12">
         <div class="text-center space-y-">
           <h1 class="text-5xl cartoon-title"> 
-            Babyshower
+            Oh Baby!
           </h1>
-          <div class="cartoon-card">
+          <div class="cartoon-card md:border-8 overflow-hidden">
             <%!-- <img class="w-full h-[400px] object-cover rounded-[2rem] border-8 border-white" src={~p"/images/image4.png"}/> --%>
-            <img class="w-full object-cover rounded-[2rem] border-8 border-white" src={~p"/images/couple-final.svg"}/>
+            <img class="w-full h-full object-cover scale-125 hover:scale-130 rounded-[2rem] border-8 border-white" src={~p"/images/esha_harshil.jpg"}/>
           </div>
         </div>
 
         <div class="cartoon-card text-center space-y-4 py-8">
-          <p class="text-2xl cartoon-text">Join us for a baby shower honoring parents to be</p>
+          <p class="text-2xl cartoon-text">Join us in celebrating the parents to be</p>
           <p class="text-3xl">
-            <span class="name-eshangi">Eshangi</span> & <span class="name-harshil">Harshil</span>
+            <span class="name-eshangi">Eshangi</span> <span class="text-xl" > & </span>  <span class="name-harshil">Harshil</span>
           </p>
-          <p class="text-xl cartoon-text">We are excited to share this special moment with you</p>
         
         </div>
 
-        <div class="cartoon-info-card flex flex-col md:flex-row items-center justify-center gap-2 p-2">
-          <div class="cartoon-detail2 flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 100 100">
-              <circle cx="50" cy="50" r="46" fill="#FFF0F5"/>
-              <path d="M25 20h50v50H25z" fill="none" stroke="#FF69B4" stroke-width="4"/>
-              <path d="M25 35h50M35 15v10M65 15v10" fill="none" stroke="#FF69B4" stroke-width="4"/>
-              <text x="50" y="58" font-family="Arial" font-size="32" fill="#FF69B4" text-anchor="middle" dominant-baseline="middle">16</text>
-            </svg>
-            <span>{@event_info.date}</span>
+        <div class="cartoon-info-card flex flex-col items-center justify-center gap-2 p-2">
+          <div class="flex flex-col md:flex-row md:gap-4"> 
+            <div class="cartoon-detail2 flex items-center gap-2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 100 100">
+                <circle cx="50" cy="50" r="46" fill="#FFF0F5"/>
+                <path d="M25 20h50v50H25z" fill="none" stroke="#FF69B4" stroke-width="4"/>
+                <path d="M25 35h50M35 15v10M65 15v10" fill="none" stroke="#FF69B4" stroke-width="4"/>
+                <text x="50" y="58" font-family="Arial" font-size="32" fill="#FF69B4" text-anchor="middle" dominant-baseline="middle">16</text>
+              </svg>
+              <div class="flex font-semibold">
+                  <p class="name-eshangi"> <%= "#{@event_info.date} -  #{@event_info.time}" %> </p>
+              </div>
+            </div>
           </div>
-          <div class="cartoon-detail2 flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 100 100">
-              <circle cx="50" cy="50" r="46" fill="#FFF0F5"/>
-              <circle cx="50" cy="50" r="30" fill="none" stroke="#FF69B4" stroke-width="4"/>
-              <path d="M50 35v15l10 10" fill="none" stroke="#FF69B4" stroke-width="4" stroke-linecap="round"/>
-            </svg>
-            <span class="name-harshil" >{@event_info.time}</span>
-          </div>
-          <div class="cartoon-detail2 flex items-center gap-2">
+          <div class="cartoon-detail2 flex items-center">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 100 100">
               <circle cx="50" cy="50" r="46" fill="#FFF0F5"/>
               <path d="M50 15c-12 0-22 10-22 22 0 16 22 40 22 40s22-24 22-40c0-12-10-22-22-22zm0 30c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z" 
                     fill="#FF69B4"/>
             </svg>
-            <span>{@event_info.location}</span>
+            <div class="border border-black/50 opacity-50 m-2" />
+              <div class="flex flex-col font-semibold">
+                  <p class="n"> <%= @event_info.venue_title %> </p>
+                  <p class="name-harshil underline text-sm"> <%= "#{@event_info.location}, #{@event_info.city} #{@event_info.state}, #{@event_info.zip}" %> </p>
+              </div>
           </div>
           </div>
       </div>
